samples/_failures_safe/1761660057_dd8bde_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4db7508f.c: In function ‘main’:
./samples/SAFE/__tmp_4db7508f.c:132:5: error: expected expression at end of input
  132 |     addEdge(graph, 2, 4,
      |     ^~~~~~~
./samples/SAFE/__tmp_4db7508f.c:132:5: error: expected declaration or statement at end of input
